Refactor: replace JDK 23 methods with JDK 17-compatible syntax